# StratDaemon

./: .gitignore  Makefile  README.md  config.ini  requirements.txt  requirements_ml.txt  sample.py  sample_orders.json  setup.cfg  setup.py
examples/: sample.py  sample_currencies.txt  sample_currency_codes.txt  sample_holdings.json
ml/rf/: test.py
ml/tuning/: test.py
results/: performance.csv
scripts/: parallel_backtests.sh
src/StratDaemon/: shell.py
src/StratDaemon/daemons/: base.py  strat.py
src/StratDaemon/integration/: base.py  robinhood.py
src/StratDaemon/integration/broker/: alpaca.py  base.py  crypto_compare.py  kraken.py  robinhood.py  utils.py
src/StratDaemon/integration/confirmation/: base.py  crypto_db.py
src/StratDaemon/integration/db/: alpaca.py
src/StratDaemon/integration/notification/: base.py  sms.py
src/StratDaemon/models/: crypto.py
src/StratDaemon/portfolio/: graph_positions.py  portfolio_manager.py
src/StratDaemon/strats/: base.py  boll.py  fib_vol.py  fib_vol_rsi.py  naive.py  rsi.py  rsi_boll.py
src/StratDaemon/utils/: constants.py  funcs.py  indicators.py
tests/: back_tester.py  fake_broker.py  full_back_tester.py  get_results.py  graph_full_results.py  pull_data.py  rh_broker.py  test_models.py
